tools/service3/service3-envoy.yaml
---
node:
  metadata:
    ads: true
    service_name: service3
    proxy_settings:
      outgoing:
        dependencies:
          - service: "*"
  locality:
    zone: default-zone

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    traffic_direction: INBOUND
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          # tracing:
          #   provider:
          #     name: envoy.tracers.zipkin
          #     typed_config:
          #       "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
          #       collector_cluster: jaeger
          #       collector_endpoint: "/api/v2/spans"
          #       shared_span_context: false
          #       collector_endpoint_version: HTTP_JSON
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service3
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_service
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          use_remote_address: true
  clusters:
    - connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: envoy-control-xds
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 50000
      http2_protocol_options: { }
      name: envoy-control-xds
    - name: envoy-original-destination
      type: ORIGINAL_DST
      lb_policy: CLUSTER_PROVIDED
      original_dst_lb_config:
        use_http_header: true
      connect_timeout:
        seconds: 1
      http_protocol_options:
        allow_absolute_url: true
    - name: local_service
      type: STRICT_DNS
      load_assignment:
        cluster_name: local_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8070
      connect_timeout: 1s
    - name: service1
      type: STRICT_DNS
      load_assignment:
        cluster_name: service1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service1
                      port_value: 8000
      connect_timeout: 1s
    - name: service2
      type: STRICT_DNS
      load_assignment:
        cluster_name: service3
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service3
                      port_value: 8000
      connect_timeout: 1s
    - name: this_admin
      type: STATIC
      load_assignment:
        cluster_name: this_admin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9999
      connect_timeout:
        seconds: 1

dynamic_resources:
  lds_config:
    resource_api_version: V3
    ads: {}
  cds_config:
    resource_api_version: V3
    ads: {}
  ads_config:
    transport_api_version: V3
    api_type: GRPC
    grpc_services:
      envoy_grpc:
        cluster_name: envoy-control-xds

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9999
